# manage-vehicles

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  vehicles.py
app/core/: config.py  exchange.py  logging_config.py  security.py
app/db/: session.py
app/models/: user.py  vehicle.py
app/repositories/: user_repo.py  vehicle_repo.py
app/schemas/: common.py  vehicle.py
app/services/: auth_service.py  vehicle_service.py
migrations/: env.py
migrations/versions/: 1177f89ef9c8_initial.py
scripts/: init-test-db.sql  seed.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_vehicle_controller.py  test_vehicle_repository.py
tests/unit/: test_vehicle_service.py
